<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OPT Counter</string>
    <string name="edit_message">Input date received by USCIS</string>
    <string name="edit_message1">mm</string>
    <string name="edit_message2">dd</string>
    <string name="edit_message3">yyyy</string>
    <string name="button_send">Enter</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="hello_world">Hello world!</string>

</resources>
